--- a/gmall/gmall-oms/src/main/resources/application.yml
+++ b/gmall/gmall-oms/src/main/resources/application.yml
@@ -25,6 +25,19 @@ spring:
   sleuth:
     sampler:
       probability: 1
+  rabbitmq:
+    host: 192.168.176.128
+    port: 5672
+    virtual-host: /learn
+    username: lin
+    password: lin
+    listener:
+      simple:
+        acknowledge-mode: manual
+        prefetch: 1
+        concurrency: 6
+    publisher-confirm-type: correlated
+    publisher-returns: true
 mybatis-plus:
   mapper-locations: classpath:mapper/oms/*.xml  # 读取映射文件
   type-aliases-package: com.learn.gmall.oms.entity
