--- a/gmall/gmall-wms/src/main/resources/application.yml
+++ b/gmall/gmall-wms/src/main/resources/application.yml
@@ -25,6 +25,17 @@ spring:
   sleuth:
     sampler:
       probability: 1
+  rabbitmq:
+    host: 192.168.176.128
+    port: 5672
+    virtual-host: /learn
+    username: lin
+    password: lin
+    listener:
+      simple:
+        acknowledge-mode: manual
+        prefetch: 1
+        concurrency: 6
 mybatis-plus:
   mapper-locations: classpath:mapper/wms/**/*.xml  # 读取映射文件
   type-aliases-package: com.learn.gmall.wms.entity #别名扫描, 不用写全类名
