--- a/gmall/gmall-gateway/src/main/resources/application.yml
+++ b/gmall/gmall-gateway/src/main/resources/application.yml
@@ -61,6 +61,16 @@ spring:
             - Host=order.gmall.com
           filters:
             - Auth=/
+        - id: payment-route
+          uri: lb://payment-service
+          predicates:
+            - Host=payment.gmall.com
+          filters:
+            - Auth=/
+        - id: payment-route
+          uri: lb://payment-service
+          predicates:
+            - Path=/pay/**
 jwt:
   token: token
   cookieName: GMALL-TOKEN
