--- a/gmall/pom.xml
+++ b/gmall/pom.xml
@@ -38,6 +38,7 @@
         <module>gmall-order</module>
         <module>gmall-cart-interface</module>
         <module>gmall-oms-interface</module>
+        <module>gmall-payment</module>
     </modules>
 
     <properties>
